fixed overflow css

--- a/frontend/src/components/ContactUs/ContactUs.css
+++ b/frontend/src/components/ContactUs/ContactUs.css
@@ -7,6 +7,7 @@
     height: 90vh;
     justify-content: center;
     align-items: center;
+    overflow: scroll;
 }
 
 .StoreInfo {
