--- a/frontend/src/components/InventoryForm/InventoryForm.css
+++ b/frontend/src/components/InventoryForm/InventoryForm.css
@@ -7,7 +7,7 @@
     height: 90vh;
     gap: 550px;
     justify-content: center;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .Right {
